--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "lint": "tsc --noEmit && eslint src/**/*.ts{,x}",
     "pre-build": "node scripts/update-manifest.js",
     "post-build": "node scripts/create-production-overwolf-build",
-    "package-overwolf": "cd build && tar -acf ../package.v$npm_package_version.zip * && cd -",
+    "package-overwolf": "cd build && tar -acf ../package.v$npm_package_version.zip * && cd ..",
+    "build-overwolf": "nodemon --delay 4 --watch src/**/**/* --ext js,ts,css,tsx,jsx --exec npm run build:overwolf",
     "build:overwolf": "npm run pre-build && npm run build && npm run post-build && npm run package-overwolf"
   },
   "eslintConfig": {
@@ -62,6 +63,7 @@
     "@types/react-dom": "^18.2.18",
     "@types/react-redux": "^7.1.33",
     "@types/remote-redux-devtools": "^0.5.8",
+    "nodemon": "^3.0.3",
     "prettier": "^3.2.4",
     "semantic-release": "^22.0.12",
     "typescript": "^5.3.3"
