--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "@supabase/supabase-js": "^2.39.3",
     "formik": "^2.4.5",
     "i18next": "^23.7.18",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.3",
     "overwolf-hooks": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.1",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
+    "sort-by": "^1.2.0",
     "supabase": "^1.131.5",
     "web-vitals": "^3.5.1",
     "yup": "^1.3.3"
