[IMP] Inventory : Added placeholders in market and inventory

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "sort-by": "^1.2.0",
     "supabase": "^1.131.5",
     "web-vitals": "^3.5.1",
